--- a/output/team.html
+++ b/output/team.html
@@ -25,40 +25,53 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">mgr</h2>
+        <h2 class="card-title">Julia</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: mgr1</li>
-            <li class="list-group-item">Email: <a href="mailto:mgr@gmail.com">mgr@gmail.com</a></li>
+            <li class="list-group-item">ID: 01</li>
+            <li class="list-group-item">Email: <a href="mailto:julia@gmail.com">julia@gmail.com</a></li>
             <li class="list-group-item">Office number: 305</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">en1</h2>
+        <h2 class="card-title">engineer1</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: en1</li>
+            <li class="list-group-item">ID: 02</li>
             <li class="list-group-item">Email: <a href="mailto:en1@gmail.com">en1@gmail.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/en1github" target="_blank" rel="noopener noreferrer">en1github</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/engithub" target="_blank" rel="noopener noreferrer">engithub</a></li>
+        </ul>
+    </div>
+</div>
+,<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">engineer2</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 04</li>
+            <li class="list-group-item">Email: <a href="mailto:en2@gmail.com">en2@gmail.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/en2github" target="_blank" rel="noopener noreferrer">en2github</a></li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">in</h2>
+        <h2 class="card-title">intern</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: in1</li>
-            <li class="list-group-item">Email: <a href="mailto:in1@gmail.com">in1@gmail.com</a></li>
-            <li class="list-group-item">School: school</li>
+            <li class="list-group-item">ID: 03</li>
+            <li class="list-group-item">Email: <a href="mailto:intern@gmail.com">intern@gmail.com</a></li>
+            <li class="list-group-item">School: college</li>
         </ul>
     </div>
 </div>
